# inderun

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.json  .releaserc  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Package.swift  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  release.config.js
.github/: dependabot.yml
.github/workflows/: android.yml  capacitor.yml  codeql.yml  javascript.yml  maven-publish.yml  release.yml  rust.yml  swift.yml
android/: README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android/inderun-contracts/: README.md  build.gradle.kts
android/inderun-core/: README.md  build.gradle.kts
android/inderun-demo-app/: README.md  build.gradle.kts
android/inderun-kotlin/: README.md  build.gradle.kts
android/inderun-mlkit-providers/: README.md  build.gradle.kts
android/inderun-openai-providers/: README.md  build.gradle.kts
contracts/: README.md
contracts/schemas/: http-response.schema.json  route-plan.schema.json  route-planner-input.schema.json  task-request.schema.json  task-result.schema.json
contracts/scripts/: generate-contracts.mjs
docs/: ci.md  release.md
docs/architecture/: api-surface.md  architecture.md  contracts.md  inderun-architecture.md  providers.md  technical-brief.md
ios/IndeRun/: .swiftlint.yml  Package.swift  README.md
rust/inderun-route-core/: Cargo.toml  README.md
rust/inderun-route-core/src/: ffi.rs  lib.rs  model.rs  planner.rs  tests.rs
scripts/: release-publish.mjs  set-version.mjs
(+79 files in other folders)
