[package]
name = "inderun_route_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared Rust route-planning core for IndeRun."

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
jni = "0.22.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"

[features]
default = []

